fixed bugs, added data fields
