# docs/swagger.json
@@ -16,6 +16,43 @@
     },
     "basePath": "/",
     "paths": {
+        "/current-projects": {
+            "get": {
+                "description": "get current projects",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Current Project"
+                ],
+                "summary": "Get all current projects",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Projects Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Projects page",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/data.CurrentProject"
+                        }
+                    }
+                }
+            }
+        },
         "/post/{slug}": {
             "get": {
                 "description": "get post by slug",
@@ -50,7 +87,7 @@
         },
         "/posts": {
             "get": {
-                "description": "get current projects",
+                "description": "get posts",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,19 +95,19 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Current Project"
+                    "Post"
                 ],
-                "summary": "Get all current projects",
+                "summary": "Get all posts",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Projects Limit",
+                        "description": "Posts Limit",
                         "name": "limit",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Projects page",
+                        "description": "Posts page",
                         "name": "page",
                         "in": "query"
                     }
@@ -79,7 +116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/data.CurrentProject"
+                            "$ref": "#/definitions/data.Post"
                         }
                     }
                 }
@@ -160,6 +197,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "image_url": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -205,6 +245,9 @@
                 },
                 "slug": {
                     "type": "string"
+                },
+                "table_of_contents": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string"
